# random-bits-of-stuff

./: .gitignore  README.md  sample.py
structured_output_example/: pyproject.toml  sample.py  sample_prompt.txt  test.py
