[tool.poetry]
name = "structured-output-example"
version = "0.1.0"
description = ""
authors = ["Justin Flick <Justinjayflick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
poetry-dotenv = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
